--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -1,4 +1,5 @@
 $base-font-size: 10px;
+$main-content-width-tablet: 93%;
 
 $font-color: #272727;
 $contact-color: #FFFFFF;
@@ -8,6 +9,7 @@ $header-modal-bg-color: #343434;
 $header-tablet-bg-color: #FFFFFF;
 $button-hover-color: #FFFFFF;
 $card-bg-color: #FFFFFF;
+$card-border-color-tablet: #707070;
 $button-traffic-more-bg-color: #E6E6E6;
 $button-traffic-more-hover-bg-color: #707070;
 $button-header-tel-bg-color: #E6E6E6;
