--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -1,5 +1,6 @@
 $base-font-size: 10px;
 $main-content-width-tablet: 93%;
+$font-bold-semiBold: 900;
 
 $font-color: #272727;
 $contact-color: #FFFFFF;
