--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -14,6 +14,10 @@
 		height: 90px;
 	}
 
+	@include mobile {
+		height: 60px;
+	}
+
 	background-image: url("../images/header-bg.png");
 	background-repeat: repeat;
 	background-size: cover;
@@ -45,7 +49,11 @@
 					margin: 20px 13px;
 
 					@include tablet {
-						margin: 1% 3%;//margin: 7px 25px;
+						margin: 1% 3%;
+					}
+
+					@include tablet {
+						margin-left: 5%;
 					}
 
 					img {
@@ -53,7 +61,10 @@
 							width: 100%;
 							height: 90px;
 							object-fit: contain;
-	
+						}
+
+						@include mobile {
+							height: 60px;
 						}
 					}
 				}
@@ -121,6 +132,10 @@
 					justify-content: flex-end;
 				}
 
+				@include mobile {
+					width: 50%;
+				}
+
 				&-button {
 					@include tablet {
 						width: 90px;
@@ -134,12 +149,22 @@
 						align-items: center;
 						justify-content: flex-end;
 						padding-bottom: 11px;
-						@include mixin.FontSize(11px);	
+						@include mixin.FontSize(11px);
+					}
+
+					@include mobile {
+						@include mixin.FontSize(8px);
+						padding-bottom: 7px;
 					}
 
 					img {
 						@include tablet {
 							margin-bottom: 8px;
+						}
+
+						@include mobile {
+							height: 27px;
+							margin-bottom: 6px;
 						}
 					}
 
@@ -157,15 +182,27 @@
 							@include tablet {
 								top: 26px;
 							}
+
+							@include mobile {
+								top: 16px;
+							}
 						}
 						&:nth-of-type(2) {
 							@include tablet {
 								top: 38px;
 							}
+
+							@include mobile {
+								top: 25px;
+							}
 						}
 						&:nth-of-type(3) {
 							@include tablet {
 								top: 50px;
+							}
+
+							@include mobile {
+								top: 34px;
 							}
 						}
 					}
@@ -185,6 +222,10 @@
 
 							position: relative;
 							z-index: 3;
+						}
+
+						@include mobile {
+							margin-top: 47px;
 						}
 
 						&-outer {
@@ -236,6 +277,15 @@
 
 								cursor: pointer;
 
+								@include mobile {
+									width: 60px;
+									@include mixin.FontSize(12px);
+
+									height: 8vh;
+									margin-right: 5px;
+									margin-top: 0;
+								}
+
 								&-icon {
 									position: relative;
 									span {
@@ -247,20 +297,37 @@
 											background-color: var.$contact-color;
 											border-radius: 2px;
 										}
+
+										@include mobile {
+											width: 65%;
+											height: 3px;
+										}
 										
 										&:nth-of-type(1) {
 											@include tablet {
 												top: -25px;
+											}
+
+											@include mobile {
+												top: -9px;
 											}
 										}
 										&:nth-of-type(2) {
 											@include tablet {
 												top: -45px;
 											}
+
+											@include mobile {
+												top: -20px;
+											}
 										}
 										&:nth-of-type(3) {
 											@include tablet {
 												top: -65px;
+											}
+
+											@include mobile {
+												top: -31px;
 											}
 										}
 									}
@@ -275,12 +342,20 @@
 								display: block;
 								margin: 39px auto 0;
 							}
+
+							@include mobile {
+								width: 75%;
+							}
 						}
 					}
 
 					&-item {
 						@include tablet {
 							padding-bottom: 54px;
+						}
+
+						@include mobile {
+							padding-bottom: 35px;
 						}
 
 						a {
@@ -292,6 +367,11 @@
 								width: 100%;
 								@include mixin.FontSize(28px);
 								font-weight: bold;
+							}
+
+							@include mobile {
+								@include mixin.FontSize(15px);
+								font-weight: var.$font-bold-semiBold;
 							}
 	
 							&:last-of-type {
