--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,7 +478,7 @@
     opacity: 1;
   }
 }
-.main-visual-inner {
+.main-visual-inner, .main-visual-inner-memorial {
   position: relative;
   width: 100%;
   height: 950px;
@@ -490,16 +490,16 @@
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 960px) {
-  .main-visual-inner {
+  .main-visual-inner, .main-visual-inner-memorial {
     height: 930px;
   }
 }
 @media screen and (max-width: 960px) {
-  .main-visual-inner {
+  .main-visual-inner, .main-visual-inner-memorial {
     height: 607px;
   }
 }
-.main-visual-inner-title {
+.main-visual-inner-title, .main-visual-inner-memorial-title {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -510,6 +510,31 @@
 .main-visual-inner-title-img {
   height: 100%;
 }
+.main-visual-inner-memorial {
+  height: 600px;
+  background-image: url("../images/junenji_memorial_mv.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.main-visual-inner-memorial-title {
+  width: 25%;
+  padding: 2% 4%;
+  background-color: rgba(64, 64, 64, 0.75);
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 3.7rem;
+}
+@media screen and (max-width: 1400px) {
+  .main-visual-inner-memorial-title {
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .main-visual-inner-memorial-title {
+    font-size: 2.5rem;
+  }
+}
 .main-contents {
   width: 100%;
   max-width: 1320px;
@@ -518,6 +543,13 @@
 .main-bg {
   background-image: url("../images/bg.png");
   background-repeat: repeat;
+}
+.main-bg2 {
+  background-image: url("../images/bg2.png");
+  background-repeat: repeat;
+}
+.main-bg3 {
+  background-color: #FFFFFF;
 }
 .main-about {
   display: flex;
@@ -635,6 +667,11 @@
     line-height: 1.4285714286;
   }
 }
+.main-about-contents-text-memorial {
+  margin-top: 80px;
+  font-size: 2.5rem;
+  line-height: 1.92;
+}
 .main-about-contents-button {
   margin-top: 56px;
   font-size: 2.3rem;
@@ -654,6 +691,10 @@
 .main-about-contents-button:hover {
   background-color: #272727;
   color: #FFFFFF;
+}
+.main-about-memorial {
+  padding-top: 150px;
+  padding-bottom: 150px;
 }
 @media screen and (max-width: 960px) {
   .main-menu-list {
@@ -846,6 +887,28 @@
     padding-bottom: 12px;
   }
 }
+.main-video-memorial {
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+.main-video-memorial-video {
+  width: 100%;
+  max-width: 1320px;
+  height: 700px;
+}
+.main-video-memorial-text {
+  margin-top: 70px;
+  font-size: 2rem;
+}
+.main-video-memorial-button {
+  display: block;
+  margin: 70px auto 0;
+  padding: 16px 40px;
+  font-size: 3rem;
+  font-weight: bold;
+  background-color: #FFFFFF;
+  border: 2px solid #707070;
+}
 .main-traffic {
   padding-top: 200px;
   padding-bottom: 200px;
@@ -965,6 +1028,33 @@
 .main-traffic-more:hover {
   background-color: #707070;
   color: #FFFFFF;
+}
+.main-accept {
+  position: relative;
+  padding-top: 150px;
+  padding-bottom: 200px;
+}
+.main-accept-title {
+  font-size: 4.5rem;
+  font-weight: bold;
+  display: block;
+  margin: 0 auto;
+  width: 50%;
+  padding: 26px 115px;
+  border: 2px solid #707070;
+}
+.main-accept-list {
+  list-style-image: url("../images/list-icon.png");
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 40px;
+  margin-top: 100px;
+}
+.main-accept-item {
+  width: 50%;
+  font-size: 4rem;
+  font-weight: bold;
+  margin-bottom: 40px;
 }
 @media screen and (max-width: 960px) {
   .main-slider {
