--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -5,9 +5,11 @@ $font-bold-semiBold: 900;
 $font-color: #272727;
 $contact-color: #FFFFFF;
 $contact-bg-color: #272727;
+$main-visual-color: #FFFFFF;
 $header-contact-hover-color: #FFF3B1;
 $header-modal-bg-color: #343434;
 $header-tablet-bg-color: #FFFFFF;
+$main-accept-bg-color: #FFFFFF;
 $button-hover-color: #FFFFFF;
 $card-bg-color: #FFFFFF;
 $card-border-color-tablet: #707070;
@@ -17,6 +19,7 @@ $button-header-tel-bg-color: #E6E6E6;
 $button-header-access-bg-color: #B2B2B2;
 $button-header-hamburger-bg-color: #E6E6E6;
 $button-header-hamburger-color: #272727;
+$button-memorial-contact-border-color: #707070;
 
 $contents-width: 1320px;
 
