--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -38,6 +38,10 @@
 				height: 600px;
 				@include mixin.SetBackGroundImage("../images/junenji_memorial_mv.png");
 			
+				@include tablet {
+					height: 400px;
+				}
+
 				&-title {
 					@extend .main-visual-inner-title;
 					width: 25%;
@@ -52,6 +56,12 @@
 					}
 					@include otherResponsive(1100px) {
 						@include mixin.FontSize(25px);
+					}
+
+					@include tablet {
+						border: 1px solid var.$main-visual-color;
+						width: 40%;
+						@include mixin.FontSize(34px);
 					}
 				}
 			}
@@ -168,6 +178,12 @@
 						@include mixin.FontSize(24px);
 					}
 				}
+
+				&-memorial {
+					@include tablet {
+						@include mixin.FontSize(40px);
+					}
+				}
 			}
 
 			&-text {
@@ -192,6 +208,13 @@
 
 					@include mixin.FontSize(25px);
 					@include mixin.LineHeight(25, 48);
+
+					@include tablet {
+						margin-top: 40px;
+
+						@include mixin.FontSize(20px);
+						@include mixin.LineHeight(20, 36);
+					}
 				}
 			}
 
@@ -343,7 +366,6 @@
 				}
 
 				&:hover {
-
 					&::after {
 						transform: scale(var.$main-menu-animation-scale);
 					}
@@ -424,20 +446,38 @@
 
 	&-video {
 		&-memorial {
-
 			padding-top: 150px;
 			padding-bottom: 150px;
+
+			@include tablet {
+				display: block;
+				@include mixin.FixContentsCenterTablet;
+
+				padding-top: 100px;
+				padding-bottom: 100px;
+			}
 
 			&-video {
 				width: 100%;
 				max-width: var.$contents-width;
 				height: 700px;
+
+				@include tablet {
+					height: 390px;
+				}
 			}
 
 			&-text {
 				margin-top: 70px;
 
 				@include mixin.FontSize(20px);
+
+				@include tablet {
+					margin-top: 45px;
+
+					@include mixin.FontSize(17px);
+					font-weight: bold;
+				}
 			}
 
 			&-button {
@@ -449,6 +489,23 @@
 				font-weight: bold;
 				background-color: var.$contact-color;
 				border: 2px solid var.$button-memorial-contact-border-color;	
+			
+				// CSSだけで文字変更する参考サイト：https://tadworks.jp/archives/5189
+				@include tablet {
+					@include mixin.FontSize(0px);
+
+					margin-top: 60px;
+					background: transparent;
+					padding: 23px 92px;
+				}
+
+				&:before {
+					@include tablet {
+						@include mixin.FontSize(23px);
+						content: 'お問い合わせ';
+					}
+					
+				}
 			}
 		}
 	}
@@ -576,6 +633,11 @@
 		padding-top: 150px;
 		padding-bottom: 200px;
 
+		@include tablet {
+			padding-top: 100px;
+			@include mixin.FixContentsCenterTablet;
+		}
+
 		&-title {
 			@include mixin.FontSize(45px);
 			font-weight: bold;
@@ -583,8 +645,17 @@
 			display: block;
 			margin: 0 auto;
 			width: 50%;
-			padding: 26px 115px;
+			padding: 2% 8%;		//26px 115px;
 			border: 2px solid  var.$button-memorial-contact-border-color;
+		
+			@include tablet {
+				@include mixin.FontSize(40px);
+				text-align: center;
+
+				width: 100%;
+				padding: 0;
+				border: none;
+			}
 		}
 
 		&-list {
@@ -594,6 +665,17 @@
 			flex-wrap: wrap;
 			margin-left: 40px;		// アイコン分ずらす
 			margin-top: 100px;
+
+			@include tablet {
+				width: 50%;
+				margin: 60px auto 0;
+			}
+
+			li {
+				@include tablet {
+					padding-left: 20px;
+				}
+			}
 		}
 
 		&-item {
@@ -602,6 +684,14 @@
 			@include mixin.FontSize(40px);
 			font-weight: bold;
 			margin-bottom: 40px;
+
+			@include tablet {
+				width: 100%;
+				@include mixin.FontSize(21px);
+
+				margin-bottom: 26px;
+				margin-left: 40px;		// アイコン分ずらす
+			}
 		}
 	}
 
